# cpp_template_workshop

./: CMakeLists.txt  CODEOWNERS  Doxyfile  README.md  annotated.html  basic_templates_part_1.md  classes.html  classsca_1_1const__slice__of-members.html  classsca_1_1const__slice__of.html  classsca_1_1slice__of-members.html  classsca_1_1slice__of.html  dir_b76584a8f83565c750c07c93449aaac7.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_ea912401392b0913f016ef767fa11b8d.html  files.html  forbidden.txt  functions.html  functions_func.html  hierarchy.html  index.html  lambda_primer.md  lesson_1_basic_templates_part_1.md  lesson_2_basic_templates_part_2.md  lesson_3_sfinae_challenge_section.md  lesson_3_substitution_failure_is_not_an_error.md  lesson_3_type_erasure.md  lesson_4_callables.md  lesson_4_substitution_failure_is_not_an_error.md  lesson_5_callables.md  lesson_5_variadic_templates.md  lesson_5_variadics.md  lesson_6_putting_it_all_together.md  lesson_6_variadic_templates.md  lesson_7_putting_it_all_together.md  md__r_e_a_d_m_e.html  md_lambda_primer.html  md_lesson_1_basic_templates_part_1.html  md_lesson_2_basic_templates_part_2.html  md_lesson_3_sfinae_challenge_section.html  md_lesson_3_substitution_failure_is_not_an_error.html  (+40 more)
.github/workflows/: cmake.yml  deploy_gh_pages.yml
inc/: algorithm.hpp  scalgorithm  scalgorithm.hpp  template.hpp
inc/detail/: algorithm.hpp  template.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  (+3 more)
tst/: CMakeLists.txt  cpp_template_workshop_ut.cpp  lesson_1_ut.cpp  lesson_2_ut.cpp  lesson_3_ut.cpp  lesson_4_ut.cpp  lesson_5_ut.cpp  lesson_6_ut.cpp  lesson_7_ut.cpp
tst/inc/: test_exception.hpp
